--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.4",
     "@types/styled-components": "^5.1.16",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
     "babel-plugin-styled-components": "^2.0.2",
+    "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-jest": "27.0.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-testing-library": "5.7.0",
     "eslint-plugin-unicorn": "^43.0.2",
+    "eslint-webpack-plugin": "^3.2.0",
     "gatsby": "^4.3.0",
     "gatsby-plugin-eslint": "^4.0.2",
     "gatsby-plugin-google-tagmanager": "^4.3.0",
