--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.3",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
+    "gatsby-plugin-react-i18next": "^2.0.4",
     "gatsby-plugin-robots-txt": "^1.7.0",
+    "i18next": "^21.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.18.6",
     "sass": "^1.44.0",
     "styled-components": "^5.3.3"
   },
